# AutonomousRacer

./: .env.deepracer  .env.deepracer.example  .gitignore  .gitmodules  README.md  apt-installs.txt  commands.txt  docker-compose.deepracer.yml  tum_publisher.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setupContainer.sh
bags/iphoneInput/bedroom/: metadata.yaml
bags/iphoneInput/firstTest/: metadata.yaml
bags/scripts/: sync.py
docker/deepracer-access/: Dockerfile
maps/: ayanBedroom.yaml  my_room_map.yaml
networking/: cyclonedds.xml
scripts/: ReadMe.md  makeExecutable.sh
scripts/Network/: connect_to_mesh.sh
scripts/containerControl/: enterContainer.sh  status_container.sh  stopCarContainer.sh
scripts/deepracerAccess/: _docker.sh  down.sh  scp_from_car.sh  scp_to_car.sh  shell.sh  ssh.sh  up.sh
scripts/imageControl/: buildContainer.sh  runContainer.sh
scripts/inContainer/: connect_to_mesh.sh  disconnect_from_mesh.sh  husarnet_config.xml  setupFoxglove.sh
scripts/onDeepracer/: startCarContainer.sh  stopCarContaienr.sh
scripts/outOfContainer/: enterContainer.sh  start_container.sh  stop_container.sh
scripts/simulation/: keyboardControl.sh  startTurtleBotSim.sh
src/deepracerBringup/: package.xml
src/deepracer_bringup/: bringupRosBridge.py  package.xml
src/deepracer_control/: package.xml  setup.cfg  setup.py
src/deepracer_control/deepracer_control/: batteryLevel.py  motorControl.py  sepscript.py
src/deepracer_init/: package.xml  setup.cfg  setup.py
src/deepracer_init/launch/: bringupRosBridge.py
src/deepracer_navigation/: package.xml
src/deepracer_slam/: package.xml
src/deepracer_ui/: package.xml
thirdpartyFiles/: NavLayout.json
