<?xml version="1.0"?>
<package format="3">
  <name>deepracer_bringup</name>
  <version>0.1.0</version>
  <description>Holds Launch and bringup files for deepracer Project</description>
  <maintainer email="ayansyedca@gmail.com">Ayan Syed</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>net-tools</depend>
  <depend>iputils-ping</depend>
  <depend>python3-colcon-common-extensions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>