<?xml version="1.0"?>
<package format="3">
  <name>deepracer_slam</name>
  <version>0.1.0</version>
  <description>Holds Launch and SLAM files for deepracer Project</description>
  <maintainer email="ayansyedca@gmail.com">Ayan Syed</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>